--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,7 @@
+/* Reset */
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -7,18 +10,19 @@ body {
   display: flex;
   flex-flow: column;
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  background-color: $background-color;
+  background-color: $dark-bg;
 }
 
-h1,
+h1 {
+  font-family: $title-font;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: $title-font;
+  font-family: $subtitle-font;
 }
 
 /* Site Header */
@@ -26,14 +30,14 @@ h6 {
   position: relative;
   padding: 0.25rem 0.5rem;
   background-image: $gold;
-
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+  height: 64px;
 }
 .site-title {
   font-family: $title-font;
   font-size: 3rem;
   text-decoration: none;
-  color: black;
+  color: $black;
 
   @include media-query($on-palm) {
     font-size: 1.75rem;
@@ -46,6 +50,7 @@ h6 {
   justify-content: space-between;
   align-items: center;
   max-width: 1000px;
+  height: 100%;
 
   .nav-trigger {
     display: none;
@@ -57,20 +62,24 @@ h6 {
   .trigger {
     display: flex;
     flex-flow: row;
+    align-items: center;
+    height: 100%;
   }
 
   .page-link {
+    font-family: $subtitle-font;
     text-decoration: none;
-    color: black;
-    background-color: transparent;
+    color: $black;
+    font-size: 1.5rem;
 
     &:not(:last-child) {
-      margin-right: 3rem;
+      // margin-right: 3rem;
     }
   }
 
   @include media-query($on-laptop) {
     label[for="nav-trigger"] {
+      line-height: 0;
       display: block;
       height: 100%;
       z-index: 2;
@@ -116,8 +125,14 @@ h6 {
   .page-title {
     text-align: center;
     font-size: 3rem;
-    margin-top: 0;
+    margin-bottom: 2rem;
     padding: 0 5rem;
+    // color: $teal;
+
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: $gold;
 
     @include media-query($on-palm) {
       font-size: 2rem;
@@ -140,86 +155,32 @@ h6 {
   }
 
   .cards {
-    justify-content: space-evenly !important;
+    padding: 0 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 4rem;
 
     a {
       text-decoration: none;
-      color: black;
+      color: $black;
     }
   }
 
   .card {
-    min-width: 200px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 15rem;
-    height: 20rem;
-    min-width: 240px;
-    min-height: 320px;
+    text-align: center;
+    padding: 0.5rem 1rem;
     border-radius: 5px;
-    margin-top: 90px;
-    margin-bottom: calc(20px + 0.67em);
-    margin-left: 20px;
-    margin-right: 20px;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -58%);
-      width: calc(100% + 24px);
-      height: calc(100% + 100px);
-      width: 111%;
-      height: 133%;
-      background-image: $accent-frame-png;
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-      z-index: 2;
-    }
-
-    .card-bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      width: 100%;
-      height: 100%;
-      border-radius: 5px;
-      overflow: hidden;
-
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        border-radius: 5px;
-        transition: transform 0.3s;
-      }
-    }
+    transition: transform 0.2s ease;
+    background-image: $gold;
 
     .card-title {
-      opacity: 0;
       font-size: 3rem;
-      font-family: $title-font;
+      font-family: $subtitle-font;
       padding: 0.25rem 0.5rem;
-      background-color: $background-color;
-      transition: opacity 0.3s;
     }
 
     &:hover {
-      .card-bg {
-        img {
-          transform: scale(1.25);
-          filter: blur(5px);
-        }
-      }
-
-      .card-title {
-        opacity: 1;
-      }
+      transform: scale(1.1);
     }
   }
 }
