--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -11,6 +11,14 @@
   font-size: 3rem;
   text-decoration: none;
   color: $black;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+
+  img {
+    height: 100%;
+  }
 
   @include media-query($on-palm) {
     font-size: 1.75rem;
