--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -3,39 +3,114 @@
   flex: 1;
   margin: 1rem;
   padding: 1rem 2rem;
-  border: 10px solid transparent;
-  border-image: $border-svg 230 round;
+  border: 5px solid $salmon;
   color: $white;
 
   .page-title {
     text-align: center;
-    font-size: 3rem;
+    font-size: 4rem;
     margin-bottom: 2rem;
-    padding: 0 5rem;
+    // padding: 0 5rem;
+    color: $white;
 
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    background-image: $gold;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+
+    white-space: nowrap;
+
+    // background-clip: text;
+    // -webkit-background-clip: text;
+    // color: transparent;
+    // background-image: $gold;
+
+    h1 {
+      line-height: 7rem;
+      letter-spacing: 0.5rem;
+    }
+
+    h2 {
+      font-size: 3rem;
+
+      display: flex;
+      flex-flow: row;
+      justify-content: center;
+      align-items: center;
+
+      &::before,
+      &::after {
+        content: "";
+        // width: 4rem;
+        flex-grow: 1;
+        height: 4px;
+        background: $white;
+      }
+
+      &::before {
+        margin-right: 1rem;
+      }
+      &::after {
+        margin-left: 1rem;
+      }
+    }
+    h3 {
+      font-size: 2rem;
+    }
 
     @include media-query($on-palm) {
-      font-size: 2rem;
-      padding: 0;
+      font-size: 3rem;
+
+      h1 {
+        line-height: 5rem;
+        letter-spacing: 0;
+      }
+
+      h2 {
+        font-size: 2rem;
+
+        &::before,
+        &::after {
+          width: 3rem;
+        }
+      }
+      h3 {
+        font-size: 1rem;
+      }
     }
   }
 
+  // /* Small */
+  // @media only screen and (min-width: 600px) {
+  //   --num-cols: 1;
+  // }
+  // /* Medium */
+  // @media only screen and (min-width: 800px) {
+  //   --num-cols: 4;
+  // }
+  // /* Large */
+  // @media only screen and (min-width: 1000px) {
+  //   --num-cols: 8;
+  // }
+
   .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    // grid-template-rows: repeat(auto-fill, minmax(160px, auto));
-    grid-template-rows: repeat(auto-fill, minmax(160px, 200px));
+    // grid-template-columns: repeat(var(--num-cols, 1), 1fr);
+    // grid-template-columns: repeat(auto-fit, minmax(100px, 12.5%));
+    // grid-template-rows: repeat(auto-fill, minmax(350px, 1fr));
+    // grid-template-rows: repeat(auto-fit, minmax(160px, 200px));
     // grid-template-rows: repeat(auto-fill, minmax(160px, 1fr));
-    grid-gap: 2rem;
+    // grid-gap: 2rem;
+
+    grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+    grid-auto-rows: 175px;
+
     grid-auto-flow: dense;
 
     figure {
-      width: 100%;
-      height: 100%;
+      width: calc(100% - 2rem);
+      height: calc(100% - 2rem);
+      margin: 1rem;
     }
 
     video,
@@ -45,38 +120,23 @@
       object-fit: cover;
     }
 
-    figure:nth-child(4n) {
-      border: 2px solid $yellow;
-      outline: none;
-      background-color: $yellow;
+    @for $i from 1 through 8 {
+      .col-#{$i} {
+        grid-column: span $i;
+      }
+      .row-#{$i} {
+        grid-row: span $i;
+      }
     }
 
-    .col-1 {
-      grid-column: span 1;
-    }
-    .col-2 {
-      grid-column: span 2;
-    }
-    .col-3 {
-      grid-column: span 3;
-    }
-    .col-4 {
-      grid-column: span 4;
-    }
-    .col-5 {
-      grid-column: span 5;
-    }
-    .col-6 {
-      grid-column: span 6;
-    }
-    .row-1 {
-      grid-row: span 1;
-    }
-    .row-2 {
-      grid-row: span 2;
-    }
-    .row-3 {
-      grid-row: span 3;
+    @media only screen and (max-width: 600px) {
+      @for $i from 1 through 8 {
+        .col-#{$i},
+        row-#{$i} {
+          grid-column: span 1;
+          // grid-row: span 1;
+        }
+      }
     }
   }
 
