--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 
         {%- for category in categories -%}
           <li>
-            <a class="page-link" href="#">{{ category.label | capitalize }}</a>
+            <a class="page-link" href="">{{ category.label | capitalize }}</a>
             <ul class="dropdown">
               {%- for page in category.docs -%}
                 {%- if page.title -%}
