--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -5,6 +5,7 @@
   background-image: $gold;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   height: 64px;
+  z-index: 99;
 }
 .site-title {
   font-family: $title-font;
@@ -81,6 +82,7 @@
       color: $black;
       font-size: 1.5rem;
       white-space: nowrap;
+      cursor: pointer;
 
       display: flex;
       align-items: center;
