--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -28,10 +28,10 @@
     h1 {
       line-height: 7rem;
       letter-spacing: 0.5rem;
+      font-size: 2em;
     }
-
     h2 {
-      font-size: 3rem;
+      font-size: 0.75em;
 
       display: flex;
       flex-flow: row;
@@ -41,7 +41,6 @@
       &::before,
       &::after {
         content: "";
-        // width: 4rem;
         flex-grow: 1;
         height: 4px;
         background: $white;
@@ -55,7 +54,35 @@
       }
     }
     h3 {
-      font-size: 2rem;
+      font-size: 0.5em;
+    }
+
+    span:first-of-type {
+      display: flex;
+      flex-flow: row;
+      line-height: 0.8em;
+      font-size: 0.5em;
+
+      &::before {
+        content: "";
+        flex-grow: 1;
+        margin-right: 0.25rem;
+        // background-color: black;
+        border-bottom: 4px solid $white;
+      }
+    }
+
+    span:last-of-type {
+      display: flex;
+      flex-flow: column;
+
+      &::after {
+        content: "";
+        width: 1em;
+        height: 4px;
+        background-color: $white;
+        align-self: flex-end;
+      }
     }
 
     @include media-query($on-palm) {
@@ -65,33 +92,8 @@
         line-height: 5rem;
         letter-spacing: 0;
       }
-
-      h2 {
-        font-size: 2rem;
-
-        &::before,
-        &::after {
-          width: 3rem;
-        }
-      }
-      h3 {
-        font-size: 1rem;
-      }
     }
   }
-
-  // /* Small */
-  // @media only screen and (min-width: 600px) {
-  //   --num-cols: 1;
-  // }
-  // /* Medium */
-  // @media only screen and (min-width: 800px) {
-  //   --num-cols: 4;
-  // }
-  // /* Large */
-  // @media only screen and (min-width: 1000px) {
-  //   --num-cols: 8;
-  // }
 
   .grid {
     display: grid;
@@ -129,7 +131,7 @@
       }
     }
 
-    @media only screen and (max-width: 600px) {
+    @include media-query($on-palm) {
       @for $i from 1 through 8 {
         .col-#{$i},
         row-#{$i} {
@@ -146,9 +148,11 @@
 
   .cards {
     padding: 0 2rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 4rem;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2rem;
 
     a {
       text-decoration: none;
@@ -157,11 +161,63 @@
   }
 
   .card {
+    position: relative;
     text-align: center;
-    padding: 0.5rem 1rem;
+    // padding: 0.5rem 1rem;
     border-radius: 5px;
-    transition: transform 0.2s ease;
-    background-image: $gold;
+    // transition: transform 0.2s ease;
+    // background-image: $gold;
+    // background-image: url("//via.placeholder.com/150x200");
+    // background-size: cover;
+
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+
+    // width: 150px;
+    // height: 200px;
+
+    width: 17rem;
+    // height: 22rem;
+    height: 30rem;
+
+    &::before {
+      content: "";
+      // margin-bottom: 2rem;
+      // border-radius: 50% 50% 0 0;
+      border-radius: 5px;
+      width: 80%;
+      height: 2rem;
+      background-color: black;
+      // background-image: radial-gradient(
+      //   circle at bottom,
+      //   rgba(0, 0, 0, 1) 0%,
+      //   rgba(6, 6, 6, 1) 70%,
+      //   rgba(20, 20, 20, 1) 100%
+      // );
+      background-image: linear-gradient(
+        to bottom,
+        rgba(20, 20, 20, 1) 0%,
+        rgba(6, 6, 6, 1) 20%,
+        rgba(0, 0, 0, 1) 50%,
+        rgba(6, 6, 6, 1) 80%,
+        rgba(20, 20, 20, 1) 100%
+      );
+    }
+
+    .stem {
+      width: 4px;
+      height: 1.5rem;
+      background-color: #060606;
+      background-image: linear-gradient(
+        to right,
+        rgba(20, 20, 20, 1) 0%,
+        rgba(6, 6, 6, 1) 20%,
+        rgba(0, 0, 0, 1) 50%,
+        rgba(6, 6, 6, 1) 80%,
+        rgba(20, 20, 20, 1) 100%
+      );
+    }
 
     .card-title {
       font-size: 3rem;
@@ -169,8 +225,68 @@
       padding: 0.25rem 0.5rem;
     }
 
+    .card-bg {
+      border-radius: inherit;
+      width: 100%;
+      height: 22rem;
+      // position: absolute;
+      // top: 0;
+      // left: 0;
+      box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.2);
+      transition: transform 0.2s ease;
+
+      filter: brightness(25%);
+
+      img {
+        border-radius: inherit;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .light {
+      position: absolute;
+      left: -12.5%;
+      top: 2rem;
+      width: 125%;
+      height: calc(100% - 3rem);
+      z-index: 99;
+
+      background-image: radial-gradient(
+        ellipse at top center,
+        rgba(255, 255, 255, 0.5) 0%,
+        rgba(255, 255, 255, 0.2) 50%,
+        rgba(255, 255, 255, 0) 100%
+      );
+
+      background-size: cover;
+      background-repeat: no-repeat;
+
+      backdrop-filter: brightness(400%);
+
+      clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+
+      opacity: 0;
+      transition: opacity 0.2s ease;
+    }
+
     &:hover {
-      transform: scale(1.1);
+      // transform: scale(1.1);
+
+      .card-bg {
+        transform: scale(1.05);
+      }
+
+      .light {
+        opacity: 1;
+      }
+    }
+
+    @media only screen and (hover: none) {
+      .light {
+        opacity: 1;
+      }
     }
   }
 
@@ -213,3 +329,9 @@
     }
   }
 }
+
+// body {
+//   background-image: url(/assets/img/background.jpg);
+//   background-repeat: repeat;
+//   background-size: contain;
+// }
