--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -401,4 +401,36 @@
       max-width: 100%;
     }
   }
+
+  .page-list {
+    list-style: none;
+    display: flex;
+    flex-flow: wrap;
+    gap: 2rem;
+
+    .page-item {
+      flex: 1 0 200px;
+      border-radius: 10px;
+      background: $gold;
+      font-size: 2rem;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: transform 0.2s ease;
+
+      a {
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+        text-decoration: none;
+        color: black;
+        font-family: $subtitle-font;
+      }
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+  }
 }
