Add clubs and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,4 @@
-<footer class="site-footer"></footer>
+<footer class="site-footer">
+  <p class="copyright">{{ site.copyright }}</p>
+  <p>Created by {{ site.author }}.</p>
+</footer>
