--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       </div>
     </main>
 
-    {% comment %} {%- include footer.html -%} {% endcomment %}
+    {%- include footer.html -%}
 
   </body>
 
