--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: $body-font;
   display: flex;
@@ -23,6 +27,30 @@ h4,
 h5,
 h6 {
   font-family: $subtitle-font;
+}
+
+.alpha-links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  top: -0.5rem;
+  margin-top: -0.5rem;
+  padding: inherit;
+  z-index: 2;
+
+  a {
+    color: $black;
+    font-family: $subtitle-font;
+    transition: color 0.2s ease;
+
+    &:not([href]) {
+      display: none;
+    }
+
+    &:hover {
+      color: $salmon;
+    }
+  }
 }
 
 // @import "scrollbar";
