--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -399,6 +399,10 @@
     }
     .members ul {
       list-style: none;
+
+      li {
+        text-transform: capitalize;
+      }
     }
 
     .image-container {
