--- a/_layouts/club.html
+++ b/_layouts/club.html
@@ -13,7 +13,10 @@ layout: default
       {%- assign role = member.Role -%}
       {%- assign roles = role | concat: roles -%}
     {%- endfor -%}
-    {%- assign roles = roles | uniq | reverse | where_exp: "role", "role != 'Member'" | push: "Member" -%}
+    {%- assign roles = roles | uniq | reverse -%}
+    {%- if roles contains 'Member' -%}
+      {%- assign roles = roles | where_exp: "role", "role != 'Member'" | push: "Member" -%}
+    {%- endif -%}
     {%- for role in roles -%}
       {%- assign members = site.data[page.file_name] | where: "Role",role | uniq | sort_natural -%}
       <h2>
