--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -11,4 +11,8 @@
   padding: 0.25rem;
   // background: rgba(0,0,0,0.4);
   background: linear-gradient(to top, rgba(0,0,0,0.2), rgba(0,0,0,0.5));
+
+  span {
+    user-select: none;
+  }
 }
