--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
 
-    white-space: nowrap;
+    // white-space: nowrap;
 
     h1 {
       line-height: 7rem;
