--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -488,6 +488,7 @@
 
     img {
       width: 100%;
+      border: 8px solid $yellow;
     }
   }
 
@@ -526,6 +527,7 @@
 
       img {
         width: 100%;
+        border: 8px solid $yellow;
       }
     }
   }
