--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -483,11 +483,13 @@
   section.grad-plans {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
     place-items: center;
 
     img {
       width: 100%;
+      height: 100%;
       border: 8px solid $yellow;
     }
   }
