--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -464,7 +464,7 @@
     font-size: 2rem;
   }
 
-  section.drama-show {
+  section.show {
     text-align: center;
     display: flex;
     flex-flow: column;
