--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -148,13 +148,6 @@
       margin: 1rem;
     }
 
-    video,
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
     @for $i from 1 through 8 {
       .col-#{$i} {
         grid-column: span $i;
@@ -328,13 +321,6 @@
     width: 100%;
     max-width: min-content;
     height: min-content;
-
-    img,
-    video {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
 
     figcaption {
       background-color: $white;
@@ -551,5 +537,15 @@
         border: 8px solid $yellow;
       }
     }
+  }
+}
+
+.team-awesome {
+  display: none;
+  margin: 0 auto;
+  max-width: 1000px;
+
+  img {
+    max-width: 100%;
   }
 }
